--- a/www/index.html
+++ b/www/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://192.168.1.11/* http://192.168.1.11:8080/* https://192.168.1.11/* https://192.168.1.11:8080/* http://ajax.aspnetcdn.com">
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
